--- a/src/index.css
+++ b/src/index.css
@@ -78,3 +78,28 @@ body {
     transition: background-color 0.3s ease, color 0.3s ease, border-color 0.3s ease;
 
 }
+
+
+
+
+.hide-below-500 {
+  display: block !important;
+}
+
+@media (min-width: 499px) {
+  .hide-below-500 {
+    display: none !important;
+  }
+}
+
+/* ================ */
+
+.hide-above-500 {
+  display: block !important;
+}
+
+@media (min-width: 499px) {
+  .hide-above-500 {
+    display: none !important;
+  }
+}
